@@ -1,14 +1,18 @@
+2010-03-03  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/fastLm.cpp: Moved into its own file, some more polish
+
 2010-03-03  Romain Francois <romain@r-enthusiasts.com>
 
-	* inst/include/RcppArmadillo.h: avoid an extra memory copy when 
+	* inst/include/RcppArmadillo.h: avoid an extra memory copy when
 	possible (i.e. in wrap( eGlue) and wrap( eOp ) when the elem_type
 	is int or double).
 
-	* inst/include/RcppArmadilloDefines.in.h added the SCALAR macro 
+	* inst/include/RcppArmadilloDefines.in.h added the SCALAR macro
 	to take care of the 0.9.0 api change
 
 	* src/RcppArmadillo.cpp : fix a runtime error uisng the SCALAR macro
-	
+
 2010-03-02  Dirk Eddelbuettel  <edd@dexter>
 
 	* src/RcppArmadillo.cpp: Added bare-bones 'fastLm' function
