@@ -1,5 +1,10 @@
 0.1-0	(under development)
 
+    o	the fastLm() implementation of a bare-bones lm() fit
+	(using Armadillo's solve() function) provides an example
+	of how efficient code can be written compactly using 
+	the combination of Rcpp, RcppAramadillo and Armadillo
+
     o	support for Rcpp implicit wrap of these types :
     	Mat<T>, Col<T>, Row<T>, Cube<T> where T is one of : 
     	int, unsigned int, double, float
